# xmpipe

./: .gitignore  Caps.hs  Common.hs  Digest.hs  README.md  SaslClient.hs  TestFederation.hs  TestFederationCl.hs  XmppClient.hs  XmppCommon.hs  XmppServer.hs  memo  notls_pipe.hs  notlssv_pipe.hs  prosody_s2s.hs  specifications.md  test_s2s_cl.hs  test_s2s_cl_pipe.hs  test_s2s_sv.hs  test_s2s_sv_pipe.hs  tls.hs  tls_pipe.hs  tlssv.hs  tlssv_pipe.hs  xmpipe.cabal  xmpp_client.sample_key
certs/: cakey.sample_pem  howtomake.md  otherhost.sample_cert  otherhost.sample_csr  otherhost.sample_key  xmpp_client.sample_cert
core/: FederationClientIm.hs  FederationClientIm.hs.bak  S2sClient.hs  S2sServer.hs  SaslClient.hs  SaslServer.hs  Tools.hs  Xmpp.hs  XmppClient.hs  XmppServer.hs  XmppType.hs  test_s2s_sv.hs  tls.hs  tlssv.hs
core/Network/XMPiPe/Core/C2S/: Client.hs  Server.hs
core/Network/XMPiPe/Core/S2S/: Client.hs  Server.hs
delay/: Delay.hs
disco/: Caps.hs  Disco.hs
examples/: simpleClient.hs  simpleServer.hs  test_s2s_sv.hs  tls.hs  tlssv.hs
im/: Im.hs
old/: notls.hs  notlssv.hs  test_s2s_sv.hs
sasl/: DigestMd5.hs  Fields.hs  Hmac.hs  NewSasl.hs  SaslClient.hs  SaslScramSha1Client.hs  SaslScramSha1Server.hs  SaslServer.hs  Scram.hs  ScramSha1.hs
sasl/Network/Sasl/DigestMd5/: Client.hs  Server.hs
src/: Digest.hs  FederationClient.hs  HandlePipe.hs  Retrieve.hs  SaslClient.hs  SaslServer.hs  TestFederation.hs  TestFederation.hs.bak  TestFederationCl.hs  Tools.hs  Xmpp.hs  XmppClient.hs  XmppClient.hs.bak  XmppCommon.hs  XmppServer.hs  XmppServer.hs.bak  XmppType.hs  test_s2s_sv.hs  tls.hs  tlssv.hs
test/: DigestMd5.hs  ManyChanPipe.hs  NewSasl.hs  Sasl.hs  SaslClient.hs  SaslMd5.hs  SaslServer.hs  TestSasl.hs  chanPipe.hs  digestMd5.hs  digestMd5cl.hs  digestMd5sv.hs  digestMd5sv.txt  exClient.hs  exSever.hs  getResult.hs  iomix.hs  manyChanPipe.hs  peyoChanCl.hs  peyoFork.hs  peyoForkSv.hs  pipe.hs  sasl.hs  sasl2.hs  sasl3.hs  sasl4.hs  sasl5.hs  testChan.hs  testControl.hs  testFail.hs  testMergeChan.hs  testPolling.hs  twoChan.hs
test/s2s_model/: s2s_cl.hs  s2s_cl_pipe.hs  s2s_sv.hs
test/s2s_model_io/: s2s_cl.hs  s2s_sv.hs
