build-type:	Simple
cabal-version:	>= 1.8

name:		xmpipe
version:	0.0.0.0
stability:	Experimental
author:		Yoshikuni Jujo <PAF01143@nifty.ne.jp>
maintainer:	Yoshikuni Jujo <PAF01143@nifty.ne.jp>
homepage:	https://github.com/YoshikuniJujo/xmpipe/wiki

license:	BSD3
license-file:	LICENSE

category:	Network
synopsis:	XMPP implementation using simple-PIPE
description:
    yet
    .

library
    hs-source-dirs:	core, im
    exposed-modules:
        Network.XMPiPe.Core.C2S.Client,
        Network.XMPiPe.Core.C2S.Server,
        Network.XMPiPe.Core.S2S.Client,
        Network.XMPiPe.Core.S2S.Server
    other-modules:
        Xmpp, XmppType, Tools, SaslClient, SaslServer, Im
    build-depends:
        base == 4.*, bytestring == 0.10.*, xml-pipe == 0.0.0.*,
        simple-pipe == 0.0.0.*, uuid == 1.3.*, base64-bytestring == 1.0.*,
        handle-like == 0.1.*, sasl == 0.0.0.*, monads-tf == 0.1.*
    ghc-options:	-Wall
    extensions:		PatternGuards, DoAndIfThenElse
